Fix widths with visible scrollbars
- Removes over-specifying widths

--- a/packages/ui/src/components/Layout/LayoutChrome.sass
+++ b/packages/ui/src/components/Layout/LayoutChrome.sass
@@ -9,7 +9,6 @@
 	display: flex
 	flex-direction: column
 	min-height: 100vh
-	min-width: 100vw
 
 	&-bar,
 	&-body
