--- a/packages/ui/src/components/Layout/LayoutPage.sass
+++ b/packages/ui/src/components/Layout/LayoutPage.sass
@@ -11,7 +11,6 @@
 	&-content-wrap
 		background-color: var(--cui-background-color)
 		display: flex
-		flex-basis: 100%
 		flex-direction: column
 		position: relative
 	&-content
