--- a/packages/ui/src/styles/components/titleBar.sass
+++ b/packages/ui/src/styles/components/titleBar.sass
@@ -16,7 +16,6 @@
 	position: sticky
 	top: 0
 	left: var(--layout-chrome-bar-width, 0)
-	width: calc(100vw - var(--layout-chrome-bar-width, 0))
 	z-index: 1
 
 	&::after
